@@ -1,0 +1,2 @@
+- Agregar formulario para agregar documento completo en casos, peticiones y
+  denuncias.
