@@ -9,3 +9,7 @@
   below.
 - Function to download documents was added.
 - Permission to access the application for any URL, not only '/'
+
+2016-10-06:
+
+- Option to append documents and show pages was added.
